Update resume.css for issue color contrast

--- a/public/template/css/resume.css
+++ b/public/template/css/resume.css
@@ -131,7 +131,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #3880bd !important;
+  background-color: #144F7E !important;
 }
 
 .text-primary {
